# smfm

./: .gitignore  CHECK_RESULTS.md  README.md  main.py  modal_smfm.py  pyproject.toml
conf/: config.yaml
data/: GoMvortex_data.npy
docs/: riemannian_schrodinger_bridge_connection.md  wire_gom_beijing_through_pipeline.md
scripts/: build_best_w2_table.py  build_bm_combined_table.py  build_bonemarrow_table.py  build_chained_mmd2_table.py  build_eb_8010_table.py  build_eb_hvg_otpfm_table.py  build_eb_otpfm_table.py  build_gom_eucknn_w2_table.py  build_gom_otpfm9_w2_table.py  build_pancreas_space_ablation_table.py  build_pancreas_table.py  build_paul15_table.py  check_spectral_ot_viability.py  compare_runs.py  connectivity_diagnostic.py  connectivity_diagnostic_eb_raw_vs_sphere.py  debug_premetric.py  make_toy_y_3marginal.py  pca_oracle_metrics.py  pca_protocol_oracle.py  plot_alpha_blend_heatmap.py  plot_embryoid_pca_scree.py  plot_gom_alpha_blend_heatmap.py  plot_gom_otpfm9_w2.py  plot_gom_trajectories.py  plot_linear_fm_pca.py  plot_pca_predictions.py  plot_smfm_schematic.py  plot_toy_y_simplex_sphere_ot.py  run_eb_8010_best_w2.sh  run_eb_8010_linear_2k_splits43_46.sh  run_eb_alpha_blend_grid_parallel.sh  run_eb_otpfm_alpha_blend_grid_parallel.sh  run_gom_alpha_blend_grid_eucknn.sh  run_gom_blend_sweep.sh  run_gom_grid_sweep.sh  run_gom_grid_sweep_otpfm9_parallel.sh  run_gom_grid_sweep_parallel.sh  run_gom_otpfm9_alpha_sweep.sh  run_gom_otpfm9_alpha_sweep_eucknn.sh  (+46 more)
surf/: runtime.py  space.py  train.py
tests/: test_method_registry.py  test_space.py  (+2 more)
(+109 files in other folders)
