[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "surf"
version = "0.1.0"
description = "SURF: Score-regularized Unitary Riemannian Flows for trajectory inference"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "scipy",
    "scikit-learn",
    "anndata",
    "pot",
    "phate",
    "plotly",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "snakeviz>=2.2.2",
    "scanpy>=1.11.5",
    "scvelo>=0.3.4",
    "torchcfm>=1.0",
    "modal>=1.4.2",
]

[tool.setuptools.packages.find]
include = ["surf*"]
